--- a/SecureWalk/src/app/components/rol/listarrol/listarrol.component.html
+++ b/SecureWalk/src/app/components/rol/listarrol/listarrol.component.html
@@ -1,54 +1,55 @@
-<div class="container" >
-    <div>
-        <h1 class="titulo">Lista de roles</h1>
+<div class="main-container">
+  <div class="top-header-section">
+    <div class="title-search-block">
+      <h1 class="page-title">Lista de Roles</h1>
+      </div>
+  </div>
+
+  <div class="content-cards-section">
+    <div *ngIf="dataSource.data.length === 0" class="no-data-container">
+      <p>No se encontraron roles para mostrar.</p>
+      <mat-icon class="no-data-icon">sentiment_dissatisfied</mat-icon>
     </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="c1">
-            <th mat-header-cell *matHeaderCellDef> ID. </th>
-            <td mat-cell *matCellDef="let element"> {{element.idRol}} </td>
-        </ng-container>
+    <div class="cards-grid" *ngIf="dataSource.data.length > 0">
+      <mat-card class="role-card" *ngFor="let element of dataSource.connect() | async">
+        <mat-card-header>
+          <mat-card-title>
+            <mat-icon class="card-title-icon">security</mat-icon> Rol:
+            {{ element.nombreRol }}
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            <mat-icon class="card-icon">vpn_key</mat-icon> ID:
+            {{ element.idRol }}
+          </p>
+          <p>
+            <mat-icon class="card-icon">person</mat-icon> Usuario Asociado:
+            {{ element.usuario.nombreUsuario }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary" [routerLink]="['ediciones', element.idRol]">
+            <mat-icon>edit</mat-icon> Editar
+          </button>
+          <button mat-button color="warn" (click)="eliminar(element.idRol)">
+            <mat-icon>delete_forever</mat-icon> Eliminar
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> Rol </th>
-            <td mat-cell *matCellDef="let element"> {{element.nombreRol}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> Usuario </th>
-            <td mat-cell *matCellDef="let element"> {{element.usuario.nombreUsuario}} </td>
-        </ng-container>
-
-                <!-- Symbol Column -->
-    <ng-container matColumnDef="c4">
-      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton [routerLink]="['ediciones', element.idRol]">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c5">
-      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton (click)="eliminar(element.idRol)">
-          <mat-icon>delete_forever</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-
-    <!-- Paginador fuera de la tabla -->
-    <mat-paginator [length]="dataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 15]"
-        aria-label="Seleccionar paginación">
+    <mat-paginator
+      [length]="dataSource.data.length"
+      [pageSize]="3"
+      [pageSizeOptions]="[3, 6, 9]"
+      aria-label="Seleccionar página de roles"
+      class="user-paginator"
+      [hidden]="dataSource.data.length === 0"
+    >
     </mat-paginator>
+  </div>
 </div>
+
+<footer class="app-footer"></footer>
