--- a/SecureWalk/src/app/components/ruta/insertareditarruta/insertareditarruta.component.html
+++ b/SecureWalk/src/app/components/ruta/insertareditarruta/insertareditarruta.component.html
@@ -18,41 +18,27 @@
       <br />
 
       <mat-form-field>
-        <mat-label>Fecha Inicio</mat-label>
-        <input
-          matInput
-          [matDatepicker]="startDatePicker"
-          formControlName="horaInicio"
-        />
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="startDatePicker"
-        ></mat-datepicker-toggle>
-        <mat-datepicker #startDatePicker></mat-datepicker>
+        <mat-label>Hora de Inicio</mat-label>
+        <input matInput [matTimepicker]="pickerInicio" formControlName="horaInicio" />
+        <mat-timepicker-toggle matIconSuffix [for]="pickerInicio"></mat-timepicker-toggle>
+        <mat-timepicker #pickerInicio></mat-timepicker>
         <mat-error *ngIf="form.get('horaInicio')?.hasError('required')">
-          La fecha de inicio es obligatoria!!
+          La hora de inicio es obligatoria!!
         </mat-error>
       </mat-form-field>
       <br />
+
       <mat-form-field>
-        <mat-label>Fecha Fin</mat-label>
-        <input
-          matInput
-          [matDatepicker]="endDatePicker"
-          formControlName="horaFin"
-        />
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="endDatePicker"
-        ></mat-datepicker-toggle>
-        <mat-datepicker #endDatePicker></mat-datepicker>
+        <mat-label>Hora Fin</mat-label>
+        <input matInput [matTimepicker]="pickerFin" formControlName="horaFin" />
+        <mat-timepicker-toggle matIconSuffix [for]="pickerFin"></mat-timepicker-toggle>
+        <mat-timepicker #pickerFin></mat-timepicker>
         <mat-error *ngIf="form.get('horaFin')?.hasError('required')">
-          El fin de fecha es obligatoria!!
+          La hora fin es obligatoria!!
         </mat-error>
       </mat-form-field>
       <br />
+
       <mat-form-field>
         <mat-label>Nivel de seguridad</mat-label>
         <mat-select formControlName="seguridad">
@@ -68,8 +54,8 @@
       </mat-form-field>
       <br />
 
-      <button mat-raised-button color="primary">Aceptar</button>
-      <button mat-raised-button color="warn" (click)="cancelar()">
+      <button mat-raised-button color="primary" [style.background-color]="'#3f51b5'">Aceptar</button>
+      <button mat-raised-button color="warn" [style.background-color]="'#FFC107'" (click)="cancelar()">
         Cancelar
       </button>
     </form>
